--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,12 @@
     "@angular/compiler": "^21.1.0",
     "@angular/core": "^21.1.0",
     "@angular/forms": "^21.1.0",
-    "@angular/material": "~21.1.5",
+    "@angular/material": "^21.1.5",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@ng-icons/core": "^33.1.0",
+    "@ng-icons/feather-icons": "^33.1.0",
+    "@ng-icons/heroicons": "^33.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -38,7 +41,6 @@
     "@angular/build": "^21.1.4",
     "@angular/cli": "^21.1.4",
     "@angular/compiler-cli": "^21.1.0",
-    "@angular/material": "^21.1.5",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
